Details
-
Bug
-
Resolution: Done
-
P0: Blocker
-
5.10.0 Beta 1
-
None
-
ce019efb5cfcc0bce516a761be4295c568994a31
Description
items/qquickwindow.cpp: In member function 'bool QQuickWindowPrivate::deliverNativeGestureEvent(QQuickItem*, QNativeGestureEvent*)': items/qquickwindow.cpp:1922:56: error: no matching function for call to 'QNativeGestureEvent::QNativeGestureEvent(Qt::NativeGestureType, QPointF&, const QPointF&, const QPointF&, qreal, long int, long int)' event->value(), 0L, 0L); // TODO can't copy things I can't access ^ items/qquickwindow.cpp:1922:56: note: candidates are: In file included from items/qquickwindow.h:48:0, from items/qquickwindow.cpp:40: /Users/qt/work/install/include/QtGui/qevent.h:304:5: note: QNativeGestureEvent::QNativeGestureEvent(Qt::NativeGestureType, const QTouchDevice*, const QPointF&, const QPointF&, const QPointF&, qreal, ulong, quint64) QNativeGestureEvent(Qt::NativeGestureType type, const QTouchDevice *dev, const QPointF &localPos, const QPointF &windowPos, ^ /Users/qt/work/install/include/QtGui/qevent.h:304:5: note: candidate expects 8 arguments, 7 provided /Users/qt/work/install/include/QtGui/qevent.h:301:20: note: QNativeGestureEvent::QNativeGestureEvent(const QNativeGestureEvent&) class Q_GUI_EXPORT QNativeGestureEvent : public QInputEvent ^ /Users/qt/work/install/include/QtGui/qevent.h:301:20: note: candidate expects 1 argument, 7 provided /Users/qt/work/install/include/QtGui/qevent.h:301:20: note: QNativeGestureEvent::QNativeGestureEvent(QNativeGestureEvent&&) /Users/qt/work/install/include/QtGui/qevent.h:301:20: note: candidate expects 1 argument, 7 provided
log:https://testresults.qt.io/coin/api/results/qt/qtdeclarative/b23889851a0d8c779bd7f2f3605375f8adc1cb05/MacOSMacOS_10_12x86_64AndroidAndroid_ANYarmv7GCCqtci-macos-10.12-x86_64-8-afb722Release_DisableTests_OpenGLES2/6fba9ccb3370354809222e0935c8853508273489/build_1506039075/buildlog.txt.gz
details: https://testresults.qt.io/coin/integration/qt/qt5/tasks/1506038763
Change: https://codereview.qt-project.org/#/c/206273/