add back the device-less QNativeGestureEvent (deprecated)

It was an oversight in 83729ad7a1e2d9c75ddf7238ab7c91b514dcebcf
that this constructor is still in use in other modules.  And in fact
we cannot remove public constructors without deprecating them first.

Task-number: QTBUG-63355
Change-Id: I64dbf9bc54c0bf6be7157f047b548d3b2c5bc2ed
Reviewed-by: Simon Hausmann <simon.hausmann@qt.io>